# notification-service

./: .gitignore  README.md  pyproject.toml
src/notify/: channels.py  core.py  schema.py
tests/: test_console_email_client_adapter.py
