[project]
name = "notification-service"
version = "0.1.0"
description = "Python notification service to demonstrate clear, extensible code structure."
authors = [
  { name = "Shraddha Anala", email = "shraddha.anala@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "rich>=14.2.0",
    "black>=23.1.0",
    "fastapi",
    "jupyter",
    "ipykernel",
    "pydantic (>=2.12.4,<3.0.0)",
]


[tool.poetry]
package-mode = true
packages = [{ include = "notify", from = "src" }]
